--- a/sixerr/static/css/app.css
+++ b/sixerr/static/css/app.css
@@ -14,6 +14,23 @@ body {
   padding: 20px, 0px;
 }
 
+a {
+  color: #323232;
+}
+
+a:hover {
+  color: #0bb536;
+}
+
 #category a {
   padding: 5px, 15px;
+}
+
+#body .banner {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.green {
+  color: #0bb536;
 }
