--- a/sixerr/templates/base.html
+++ b/sixerr/templates/base.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
   <link rel="stylesheet" href="{% static 'css/app.css'%}">
   <link rel="icon" href="{% static 'img/icon.ico'%}">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="{% static 'js/bootstrap.min.js'%}"></script>
   <title>Document</title>
 </head>
@@ -33,10 +34,11 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                   role="button" aria-haspopup="true" aria-expanded="fase">
-                  <img src="">
+                  <img src="{% static 'img/avatar.png'%}" class="img-circle" width = 22 height=22/>
                   {{ user.get_full_name }} <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><a href="{% url 'logout'%}"> Logout </a></li>
                 </ul>
               </li>
             {% else %}
