--- a/sixerr/templates/index.html
+++ b/sixerr/templates/index.html
@@ -1,4 +1,22 @@
 {% extends 'base.html' %}
+{% load static %}
+
 {% block content %}
-  <h1> Index </h1>
+  <div class="row">
+    <div class="col-lg-12">
+      <img src="{% static 'img/banner.gif' %}" class="banner">
+    </div>
+  </div>
+
+  {% for i in '12345678'%}
+    <div class="col-lg-3">
+      <div class="thumbnail">
+        <a href="{% url 'gig_detail' i%}"><img src="{% static 'img/avatar.png' %}"></a>
+        <div class="caption">
+          <p><a href="{% url 'gig_detail' i%}"> Какая-то услуга </a></p>
+          <p><span> Исполнитель: <a href="#"> Какой-то исполнитель </a></span> <b class="green pull-right"> $5 </b></p>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock %}
