--- a/sixerr/templates/gig_detail.html
+++ b/sixerr/templates/gig_detail.html
@@ -1,5 +1,62 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
-  <a href="{% url 'index'%}"> Index </a>
+  <div class="row">
+    <div class="col-md-8">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <h3> Какая-то услуга</h3>
+          <hr>
+          <img src="{% static 'img/avatar.png'%}" class="img-responsive center-block">
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4> Об услуге </h4>
+        </div>
+        <div class="panel-body">
+          <p> Текст оказания услуги </p>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h4> Отзывы: </h4>
+          <ul class="list-group">
+            {% for i in '123' %}
+              <li class="list-group-item">
+                <div class="row">
+                  <div class="col-md-2">
+                    <img src="{% static 'img/avatar.png'%}" class="img-circle center-block" height="60" width="60">
+                  </div>
+                  <div class="col-md-10">
+                    <h5> Какой-то покупатель </h5>
+                    <p> Какой-то отзыв об услуге</p>
+                  </div>
+                </div>
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <button class="btn btn-success btn-block" type="button"> Заказать услугу ($5)  </button>
+        </div>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-body">
+          <img src="{% static 'img/avatar.png'%}" alt="" class="img-circle center-block">
+          <h4 class="text-center">
+            Какой-то исполнитель
+          </h4>
+          <hr>
+          <p> Информация об исполнителе </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
