--- a/sixerr/templates/base.html
+++ b/sixerr/templates/base.html
@@ -34,10 +34,14 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                   role="button" aria-haspopup="true" aria-expanded="fase">
-                  <img src="{% static 'img/avatar.png'%}" class="img-circle" width = 22 height=22/>
+                  <img src="{% if user.profile %} {{ user.profile.avatar }} {% else %} {% static 'img/avatar'%} {% endif %}"
+                   class="img-circle" width = 22 height=22/>
                   {{ user.get_full_name }} <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
+                  <li><a href="{% url 'create_gig'%}"> Создать услугу </a></li>
+                  <li><a href="{% url 'my_gigs'%}"> Мои услуги </a></li>
+                  <li role="separator" class="divider"></li>
                   <li><a href="{% url 'logout'%}"> Logout </a></li>
                 </ul>
               </li>
