--- a/sixerr/templates/gig_detail.html
+++ b/sixerr/templates/gig_detail.html
@@ -6,9 +6,9 @@
     <div class="col-md-8">
       <div class="panel panel-default">
         <div class="panel-body">
-          <h3> Какая-то услуга</h3>
+          <h3> {{ gig.title }}</h3>
           <hr>
-          <img src="{% static 'img/avatar.png'%}" class="img-responsive center-block">
+          <img src="/media/{{ gig.photo }}" class="img-responsive center-block">
         </div>
       </div>
       <div class="panel panel-default">
@@ -16,7 +16,7 @@
           <h4> Об услуге </h4>
         </div>
         <div class="panel-body">
-          <p> Текст оказания услуги </p>
+          <p> {{ gig.description }} </p>
         </div>
       </div>
       <div class="panel panel-default">
@@ -43,17 +43,17 @@
     <div class="col-md-4">
       <div class="panel panel-default">
         <div class="panel-body">
-          <button class="btn btn-success btn-block" type="button"> Заказать услугу ($5)  </button>
+          <button class="btn btn-success btn-block" type="button"> Заказать услугу (${{ gig.price }})  </button>
         </div>
       </div>
       <div class="panel panel-default">
         <div class="panel-body">
-          <img src="{% static 'img/avatar.png'%}" alt="" class="img-circle center-block">
+          <img src="{{ gig.user.profile.avatar }}" alt="" class="img-circle center-block">
           <h4 class="text-center">
-            Какой-то исполнитель
+            {{ gig.user.get_full_name }}
           </h4>
           <hr>
-          <p> Информация об исполнителе </p>
+          <p> {{ gig.user.profile.about }} </p>
         </div>
       </div>
     </div>
