--- a/sixerr/templates/index.html
+++ b/sixerr/templates/index.html
@@ -8,13 +8,13 @@
     </div>
   </div>
 
-  {% for i in '12345678'%}
+  {% for gig in gigs %}
     <div class="col-lg-3">
       <div class="thumbnail">
-        <a href="{% url 'gig_detail' i%}"><img src="{% static 'img/avatar.png' %}"></a>
+        <a href="{% url 'gig_detail' gig.pk%}"><img src="/media/{{ gig.photo}}"></a>
         <div class="caption">
-          <p><a href="{% url 'gig_detail' i%}"> Какая-то услуга </a></p>
-          <p><span> Исполнитель: <a href="#"> Какой-то исполнитель </a></span> <b class="green pull-right"> $5 </b></p>
+          <p><a href="{% url 'gig_detail' gig.pk%}"> {{ gig.title }}</a></p>
+          <p><span> Исполнитель: <a href="#"> {{ gig.user.username }} </a></span> <b class="green pull-right"> $ {{ gig.price }} </b></p>
         </div>
       </div>
     </div>
